# fortishell-pro

./: .envrc  .gitignore  README.md  env_setup.sh  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
gui/: # Code Citations.md  gtk_gui.py  launcher.py
modules/: file_integrity.py  file_monitor.py  password_analyzer.py  ssl_validator.py  url_checker.py
tests/: test_file_integrity.py  test_password_analyzer.py  test_ssl_validator.py  test_url_checker.py
utils/: logger.py  report_export.py
